--- a/intro-dev-web/p1_lessons-learned/index.html
+++ b/intro-dev-web/p1_lessons-learned/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lessons Learned</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header id="cabecalho">
-      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-    <nav id="menu">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header id="cabecalho" class="cabecalho">
+      <h1 id="titulo" class="titulo">Aprendizados - Trybe!</h1>
+      <nav id="menu" class="menu">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Login</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Login</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
-    <img id="minha_foto" src="imagens/perfil.jpeg" alt="Foto do perfil" width="150px"><br>
-    <a href="https://www.linkedin.com/in/moreirakarine/" target="_blank">Ana Karine R. P. Moreira</a>
-    <h2>Lições</h2>
-    <section class=”container”>
-      <ol id="licoes_aprendidas">
+    <img id="minha_foto" class="minha_foto" src="imagens/perfil.jpeg" alt="Foto do perfil" width="125px"><br />
+    <a href="https://www.linkedin.com/in/moreirakarine/" target="_blank" style="text-decoration:none;"
+      >Ana Karine R. P. Moreira</a
+    >
+
+    <section class="container">
+      <div>
+        <!--Ícones feitos por <a href="https://icon54.com/" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>-->
+      <p class="licoes"><img class="icone" src="imagens/verificado.png" width="25" height="25"><strong> Adquiridos:</strong></p>
+      <ol id="licoes_aprendidas" class="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -33,7 +41,11 @@
         <li>Inspect</li>
         <li>Semantic HTML</li>
       </ol>
-      <ul id="licoes_a_aprender">
+      </div>
+      <div>
+        <!--Ícones feitos por <a href="https://www.flaticon.com/br/icone-gratis/ampulheta_1572504" title="itim2101">itim2101</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"> www.flaticon.com</a>-->
+      <p class="licoes"><img class="icone" src="imagens/ampulheta.png" width="25" height="25"><strong> Próximos:</strong></p>
+      <ul id="licoes_a_aprender" class="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
         <li>Forms</li>
@@ -45,41 +57,41 @@
         <li>Node</li>
         <li>SQL</li>
       </ul>
+      </div>
     </section>
     <section class="container-dois">
-        <article class="lado-esquerdo">
-          <p>O aprendizado envolve: utilizar o bash e programar scripts em Shell;<br>
-            entender como a internet funciona, seus principais conceitos e terminologias;<br>
-            utilizar o Git e o Github; criar documentos HTML estilizados com CSS;<br>
-            trabalhar em um projeto, em equipe, de forma assíncrona e distribuída;<br>
-            criar páginas semanticamente válidas e acessíveis;<br>
-            realizar manutenções em páginas já existentes.</p>
-        </article>
-        <aside class="lado-direito">
-          <p><em>Esse é apenas um resumo de toda a bagagem<br>
-             de conhecimento adquirido.<br>
-             E tudo em apenas 15 dias de treinamento!</em></p>
-        </aside>
+      <article class="lado-esquerdo">
+        <p>
+          O aprendizado envolve: utilizar o bash e programar scripts em Shell; entender como a internet funciona, seus principais conceitos e terminologias; utilizar o Git e o Github; criar documentos HTML estilizados com
+          CSS; trabalhar em projetos, individuais e em equipe, de forma assíncrona e distribuída; criar páginas semanticamente válidas e acessíveis; realizar manutenções em páginas já existentes.
+        </p>
+
+      </article>
+
+      <aside class="lado-direito">
+        <p>
+          <em
+            >Esse é apenas um resumo de toda a bagagem de conhecimento adquirido. E tudo em apenas 15 dias de treinamento!</em
+          >
+        </p>
+      </aside>
+
     </section>
-    <br><br>
-    <table border="0">
-        <tr>
-            <td>Redes sociais:</td>
-            <td>
-                <footer id="rodape">
-                <ul class="icones">
-                  <li><a href="https://www.linkedin.com/in/moreirakarine" target="_blank">
-                    <img src="imagens/linkedin.png" alt="Icone do LinkedIn" width="35"></a></li>
-                  <li><a href="https://github.com/ana-karine" target="_blank">
-                    <img src="imagens/github.png" alt="Icone do GitHub" width="35"></a></li>
-                  <li><a href="https://www.instagram.com/anamoreira.br" target="_blank">
-                    <img src="imagens/instagram.png" alt="Icone do Instagram" width="35"></a></li>
-                </ul>
-                </footer>
-            </td>
-        </tr>
-    </table>
-      <br>
-      <p class="final">Todos os direitos reservados, Ana Karine</p>
-</body>
+
+          <footer class="rodape">
+            <ul class="icones">
+              <p>Redes sociais:</p>
+                <li><a href="https://www.linkedin.com/in/moreirakarine" target="_blank">
+                    <img src="imagens/linkedin.png" width="35" height="35" alt="Icone do LinkedIn"></a></li>
+                <li><a href="https://github.com/ana-karine" target="_blank">
+                    <img src="imagens/github.png" width="35" height="35" alt="Icone do GitHub"></a></li>
+                <li><a href="https://www.instagram.com/anamoreira.br" target="_blank">
+                    <img src="imagens/instagram.png" width="35" height="35" alt="Icone do Instagram"></a></li>
+            </ul>
+            </div>
+            <p class="final">Todos os direitos reservados, Ana Karine</p>
+        </footer>
+
+
+  </body>
 </html>
